# SimpleNGL

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  SimpleNGL  SimpleNGL.pro  SimpleNGL.py  SimpleNGL.vcxproj  SimpleNGLPySide2.py  runDocker.sh
include/: NGLScene.h
moc/: moc_OpenGLWindow.cpp
shaders/: PBRFragment.glsl  PBRVertexPython.glsl  PhongFragment.glsl  PhongVertex.glsl
src/: NGLScene.cpp  NGLSceneMouseControls.cpp  main.cpp
